Make base/numerics constexpr clean

Fixes some outstanding constexpr and type issues in base/numerics. This
also incorporates the __builtin_is_constant_evaluated() intrinsic to
allow switching between compile- and run- time implementations.

The impact should be improved performance by allowing more compile-time
evaluation and replacing some run-time operations with more optimized
versions where possible (e.g. Arm 32-bit integer saturation).

Bug: 866538
Change-Id: If0ba9a4bcc8bcb1977b6388f8ae96444606d0042
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/3382275
Reviewed-by: Peter Kasting <pkasting@chromium.org>
Reviewed-by: Tom Sepez <tsepez@chromium.org>
Commit-Queue: Justin Schuh <jschuh@chromium.org>
Cr-Commit-Position: refs/heads/main@{#958889}